--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,11 @@
 # PostgreSQL Database Configuration
-DB_HOST=your-coolify-host
-DB_PORT=5432
-DB_NAME=your-database-name
-DB_USER=your-username
-DB_PASSWORD=your-password
-PORT=3000
+DB_HOST=
+DB_PORT=
+DB_NAME=
+DB_USER=
+DB_PASSWORD=
+PORT=
+
+# Interact with API
+WORKADVENTURE_API_URL=
+    ADMIN_API_TOKEN=
